# OpenGLSHit

./: .gitmodules  CMakeLists.txt  README.md  a  build.bat  build.sh
src/: CMakeLists.txt  main.c  main.cpp
